--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     buildTypes {
         debug {
             buildConfigField "String", "API_BASE_URL", API_BASE_URL
@@ -59,6 +66,10 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.1'
     implementation 'androidx.room:room-ktx:2.2.1'
     kapt 'androidx.room:room-compiler:2.2.1'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
