--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
     dataBinding {
         enabled = true
     }
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "2048M"
+    }
 }
 
 dependencies {
