--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,17 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
+apply from: "../version.gradle"
+apply from: "../dependencies.gradle"
+
 android {
-    compileSdkVersion 28
+    compileSdkVersion TargetSDK
     defaultConfig {
         applicationId "si.development.ahill.beeniusdemo"
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion MinSDK
+        targetSdkVersion TargetSDK
+        versionCode generateVersionCode()
+        versionName generateVersionName()
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
@@ -38,44 +41,26 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
 
-    // Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
+    // Kotlin
+    implementation kotlinLibraries.values()
 
-    // Retrofit and networking
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    // AndroidX
+    implementation androidXLibraries.values()
+    kapt androidXProcessors.values()
 
-    // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    // Networking
+    implementation networkingLibraries.values()
 
     // Dagger
-    implementation 'com.google.dagger:dagger:2.25.2'
-    kapt 'com.google.dagger:dagger-compiler:2.25.2'
+    implementation daggerLibraries.values()
+    kapt daggerProcessors.values()
 
-    // Room
-    implementation 'androidx.room:room-runtime:2.2.1'
-    implementation 'androidx.room:room-ktx:2.2.1'
-    kapt 'androidx.room:room-compiler:2.2.1'
+    // UI
+    implementation uiLibraries.values()
+    kapt uiProcessors.values()
 
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
-
-    // TouchImageView
-    implementation 'com.github.MikeOrtiz:TouchImageView:2.2.0'
-
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // Tests
+    testImplementation testLibraries.values()
+    androidTestImplementation androidTestLibraries.values()
 }
